# audio-cleaner

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  web_app.py
conf/: config.yaml
conf/dset/: musdb44.yaml
core/: file_manager.py  job_runner.py
docs/: plan-ad-detection.md  plan-audio-quality.md  plan-fingerprint-cleaning.md  plan-noise-removal.md
patches/: README.md
patches/demucs/: repitch.py
scripts/: __init__.py  apply_patches.py  config.py  create_samples.py  generate_dataset.py  separate_audio.py
src/audio_cleaner/: __init__.py  __main__.py  ads.py
templates/: dashboard.html  dataset.html  inference.html  layout.html  not_configured.html  settings.html  training.html
templates/partials/: file_list.html  job_status.html  log_line.html
tests/: __init__.py  test_ads.py
