[project]
name = "audio-cleaner"
version = "0.1.0"
description = "Tools for cleaning audio files — removes noise, improves quality, and detects ads/interrupts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "soundfile>=0.12",
    "librosa>=0.10",
    "noisereduce>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pyrefly>=0.15",
]

[project.scripts]
audio-cleaner = "audio_cleaner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_cleaner"]

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing type annotation for `self`
    "ANN102", # missing type annotation for `cls`
]

[tool.ruff.lint.isort]
known-first-party = ["audio_cleaner"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pyrefly — type checker
# ---------------------------------------------------------------------------
[tool.pyrefly]
project-includes = ["src"]
python-version = "3.12"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=audio_cleaner --cov-report=term-missing"
