[project]
name = "audio-cleaner"
version = "0.1.0"
description = "HDemucs-based training and inference tools for removing radio jingles and adverts from audio."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
]
# ML training dependencies (HDemucs-based jingle separation).
# Install with: uv sync --extra training
# Note: for GPU support install torch/torchaudio with the matching CUDA wheel:
#   uv pip install torch torchaudio --extra-index-url https://download.pytorch.org/whl/cu126
training = [
    "demucs @ git+https://github.com/facebookresearch/demucs.git",
    "musdb>=0.4.0",
    "museval>=0.4.0",
    "hydra-core>=1.1",
    "hydra-colorlog>=1.2.0",
    "dora-search @ git+https://github.com/facebookresearch/dora.git",
    "pydub>=0.25.1",
    "tqdm>=4.65.0",
    "torch>=2.0.0",
    "torchaudio>=2.1,<2.9",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
]

# Override demucs's torchaudio<2.1 pin — that constraint predates Python 3.12 wheels.
# torchaudio 2.1-2.8 uses the classic sox/soundfile backend API (no torchcodec required).
[tool.uv]
override-dependencies = [
    "torchaudio>=2.1,<2.9",
]

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["patches/**"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["FBT001", "S603", "G004", "S607", "COM812"]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN"]
# Scripts are standalone CLI utilities — relax rules that don't apply to scripts.
"scripts/**" = [
    "T201",    # print() is fine in CLI scripts
    "S311",    # non-crypto random is fine for audio data augmentation
    "PLR2004", # magic values acceptable in scripts
    "SLF001",  # _spawn is pydub's official API for frame-rate tricks
    "PLC0415", # deferred imports are intentional (demucs only available after training setup)
    "INP001",  # scripts/ is not a package
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
